web/static/css/search.css
body {
    margin:0;
    overflow:scroll !important;
    overflow-x:hidden !important;
}

.header {
    background:var(--secondary-color);
    margin:0;
    padding-top:2.5px;
    width:100%;
    height:35px;
}

.header * {
    margin-top:0;
    margin-bottom:0;
    float:left;
}

.header a {
    margin-left:1%;
    margin-right:10px;
}

.textBox, .subBox {
    margin-top:5px !important;
    margin-right:5px;
}

.main {
    max-width:900px;
}

.resLink {
    text-decoration:none !important;
    text-decoration-color:var(--secondary-text-color) !important;
}

.resLink:hover {
    text-decoration:none !important;
}

.result {
    width:96%;
    margin:10px;
    padding:1%;
    background:var(--secondary-color);
    max-width:900px;
    border-radius:10px;
    box-shadow:0px 2px 4px rgba(0,0,0,0.25);
    transition: margin-bottom 0.2s, box-shadow 0.2s;
}

.result:hover {
    margin-bottom:20px;
    box-shadow:0px 6px 4px rgba(0,0,0,0.25);
}

.result h2, .result h4, .result p {
    margin-top:0;
    margin-bottom:5px;
    color:var(--text-color);
    cursor:pointer;
}

.result h2 {
    color:var(--secondary-text-color) !important;
}

.result h4 {
    white-space:nowrap;
    overflow:hidden;
    float:left;
    width:calc(99% - 18px);
    margin-left:5px;
}

.result .favicon {
    width:18px;
    height:18px;
    float:left;
    border-radius:2px;
}

.result p {
    font-size:16px;
}

.qnaResult p {
    font-size:20px;
    color:var(--secondary-text-color) !important;
}

.topResult, .qnaResult {
    background:var(--third-color);
}

.topResult {
    min-height:150px;
}

.topResult img, .topResult div {
    float:left;
}

.topResult img {
    object-fit:cover;
    height:150px;
    max-width:45%;
    margin-right:1%;
}

.topResult div {
    width:50%;
}

.bottom {
    margin-left:10px;
    margin-bottom:1%;
}

.bottom button {
    margin-right:10px;
    background:var(--third-color);
    color:var(--text-color);
    font-family:var(--font);
    border:0;
    height:35px;
}

